Kipi-plugins 1.1.0 - Release date: 31/01/2010
------------------------------------------------------------------------

NEW FEATURES:

ExpoBlending              : New tool to make pseudo HDR image with a stack of bracketed images.
PrintAssistant            : New custom grid layout

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> ExpoBlending      : 144593 : New High Dynamic Range (HDR) plugin.
002 ==> GalleyExport      : 219998 : Export to Gallery plugin crashes when adding files.
003 ==> AdvancedSlideShow : 215798 : Slideshow crashes when starting.
004 ==> JPEGLossLess      : 200031 : Photo is rotated but not thumbnail.
005 ==> PicasaWebExport   : 199145 : Tags not exported to picasaweb [patch].
006 ==> PicasaWebExport   : 215846 : PicasaWeb plugin crashes digiKam after start sending the pic [delete, KIPIPicasawebExportPlugin::PicasawebWindow::slotUploadImages] (double deletion)
007 ==> ExpoBlending      : 221056 : Expoblending.app causes digiKam compile to fail.
008 ==> PicasaWebExport   : 205903 : accentuated chars are converted into a mess during picasa web export [patch]
009 ==> PicasaWebExport   : 220433 : digiKam crash when has long time working on it.
010 ==> PicasaWebExport   : 208426 : Exporting images fails with : "Could not connect to host xxxx.xxxx.xxxx.xxxx: Unknown error."
011 ==> ExpoBlending      : 222297 : Overwriting on Windows and multiple saves fixes [patch].
012 ==> PicasaWebExport   : 198045 : New albums don't appear in list
013 ==>