@@ -20,4 +20,5 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 010 ==> PicasaWebExport   : 208426 : Exporting images fails with : "Could not connect to host xxxx.xxxx.xxxx.xxxx: Unknown error."
 011 ==> ExpoBlending      : 222297 : Overwriting on Windows and multiple saves fixes [patch].
 012 ==> PicasaWebExport   : 198045 : New albums don't appear in list
-013 ==>
+013 ==> PicasaWebExport   : 200469 : Ampersand character in caption causes Picasa export to freeze
+014 ==>
